Template directory adjusted for thymeleaf configuration. WebController edited to take into account new endpoints.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -40,17 +40,15 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <!-- Removed "Mini-SurveyMonkey," "User," and "Surveyor" from the navbar -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <!-- Centered the remaining items -->
-                <li class="nav-item"><a href="./home.html" class="nav-link active" aria-current="page">Home</a>
+                <li class="nav-item"><a th:href="@{/home}" class="nav-link active" aria-current="page">Home</a>
                 </li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                <li class="nav-item"><a th:href="@{/about}" class="nav-link">About</a></li>
             </ul>
         </div>
     </div>
@@ -60,8 +58,8 @@
     <div class="container">
         <h1 class="display-4 fw-bold">Welcome to Mini-SurveyMonkey!</h1>
         <p class="lead">Your platform for quick and efficient surveys.</p>
-        <a class="btn btn-light btn-lg mx-2" href="user.html">I'm a User</a>
-        <a class="btn btn-outline-light btn-lg mx-2" href="surveyor.html">I'm the Surveyor</a>
+        <a th:href="@{/user}" class="btn btn-light btn-lg mx-2">I'm a User</a>
+        <a th:href="@{/surveyor}" class="btn btn-outline-light btn-lg mx-2">I'm the Surveyor</a>
     </div>
 </main>
 
