--- a/src/main/resources/templates/SurveyCreator.html
+++ b/src/main/resources/templates/SurveyCreator.html
@@ -21,14 +21,10 @@
 <body>
 <div>
   <nav class="py-2 bg-light border-bottom">
-    <div class="container d-flex flex-wrap">
-      <ul class="nav me-auto">
-        <li class="nav-item"><a href="index.html" class="nav-link link-dark px-2 active"
-                                aria-current="page">Home</a></li>
-      </ul>
+    <div class="container d-flex justify-content-center"> <!-- Center the content -->
       <ul class="nav">
-        <li class="nav-item"><a href="listAllSurveys.html" class="nav-link link-dark px-2">User</a></li>
-        <li class="nav-item"><a href="./createSurvey.html" class="nav-link link-dark px-2">Surveyor</a></li>
+        <li class="nav-item"><a href="/" class="nav-link link-dark px-2 active"
+                                aria-current="page">Home</a></li>
       </ul>
     </div>
   </nav>
@@ -47,7 +43,6 @@
   <button type="button" class="createSurvey btn btn-outline-success px-4 mt-1">Create Survey</button><br>
 </div>
 <div id="Questions"></div>
-</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
