--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -30,7 +30,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="home" class="nav-link link-dark px-2">Home</a></li>
+                <li class="nav-item"><a href="/" class="nav-link link-dark px-2">Home</a></li>
                 <li class="nav-item"><a href="./about.html" class="nav-link link-dark px-2 active"
                                         aria-current="page">About Us</a></li>
             </ul>
