--- a/src/main/resources/templates/SurveyCreator.html
+++ b/src/main/resources/templates/SurveyCreator.html
@@ -1,52 +1,166 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
   <title>Surveyor | mini-SurveyMonkey</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="icon" href="logo/icon.png">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="createSurvey.js"></script>
   <link rel="stylesheet" href="createSurvey.css">
+  <script src="SurveyCreator.js"></script>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    nav {
+      background-color: #f8f9fa;
+      border-bottom: 1px solid #ddd;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      color: #343a40;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+
+    label {
+      font-size: 1.2em;
+      color: #343a40;
+      margin-bottom: 5px;
+    }
+
+    input,
+    select {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    .btn {
+      font-size: 1.2em;
+      margin: 10px;
+      color: #fff;
+      border: none;
+    }
+
+    .new-MCQ, .new-NumQ, .new-OpenQ, .createSurvey {
+      width: 60%;
+      margin: 10px auto;
+    }
+
+    .new-MCQ, .new-NumQ, .new-OpenQ {
+      background-color: #6c757d;
+    }
+
+    .createSurvey {
+      background-color: #28a745;
+    }
+
+    #Questions {
+      margin-top: 20px;
+    }
+
+
+    .options-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    .options-container select {
+      width: 80%;
+      margin-bottom: 10px;
+    }
+
+
+    .separator-line {
+      width: 100%;
+      border-top: 1px solid #ddd;
+      margin: 20px 0;
+    }
+
+  </style>
 </head>
 
 <body>
-<div>
-  <nav class="py-2 bg-light border-bottom">
-    <div class="container d-flex justify-content-center"> <!-- Center the content -->
-      <ul class="nav">
-        <li class="nav-item"><a href="/" class="nav-link link-dark px-2 active"
-                                aria-current="page">Home</a></li>
+
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container">
+    <a class="navbar-brand mr-auto" href="#" style="color: #343a40;">Surveyor | mini-SurveyMonkey</a>
+    <div class="collapse navbar-collapse ml-auto" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/" style="color: #343a40;">Home</a>
+        </li>
       </ul>
     </div>
-  </nav>
-</div>
-<h1 class='display-5 text-center mt-3 pt-3'>Create A Survey</h1>
+  </div>
+</nav>
 
-<div class="container grid">
-  <label for='surveyName'>Name of Survey: </label>
+
+<h1>Create A Survey</h1>
+
+<div class="container">
+  <label for='surveyName'>Name of Survey:</label>
   <input type='text' id='surveyName'>
-  <label class='px-3'>MCQ number of options:
-    <input type='number' id='MCQOptionsNum'>
-  </label><br>
-  <button type="button" class="new-MCQ btn btn-outline-secondary px-4 mt-1">Add Multiple Choice Question</button><br>
-  <button type="button" class="new-NumQ btn btn-outline-secondary px-4 mt-1">Add Numerical Range Question</button><br>
-  <button type="button" class="new-OpenQ btn btn-outline-secondary px-4 mt-1">Add Open Ended Question</button><br>
-  <button type="button" class="createSurvey btn btn-outline-success px-4 mt-1">Create Survey</button><br>
+
+  <div class="separator-line"></div>
+
+  <div class="options-container">
+    <label for='MCQOptionsNum'>MCQ number of options:</label>
+    <select id='MCQOptionsNum'>
+
+    </select>
+    <button type="button" class="new-MCQ btn btn-outline-secondary">Add Multiple Choice Question</button>
+  </div>
+
+  <button type="button" class="new-NumQ btn btn-outline-secondary">Add Numerical Range Question</button>
+  <button type="button" class="new-OpenQ btn btn-outline-secondary">Add Open Ended Question</button>
+  <button type="button" class="createSurvey btn btn-outline-success">Create Survey</button>
 </div>
+
 <div id="Questions"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="createSurvey.js"></script>
+<script>
+
+  document.addEventListener('DOMContentLoaded', function () {
+    var select = document.getElementById('MCQOptionsNum');
+    for (var i = 1; i <= 10; i++) {
+      var option = document.createElement('option');
+      option.value = i;
+      option.text = i;
+      select.add(option);
+    }
+  });
+
+</script>
+
 </body>
 
 </html>
