--- a/src/main/resources/templates/Surveyor.html
+++ b/src/main/resources/templates/Surveyor.html
@@ -89,7 +89,9 @@
 
 <main>
   <div class="container">
-    <h1 class="display-4 fw-bold">Current Surveys</h1>
+    <h1 class="display-4 fw-bold">Surveyor Portal</h1>
+    <button type="button" onclick=window.location.href="surveyor/PrintSurveys"
+            class="createSurvey btn btn-outline-success px-4 mt-1">View Current Surveys</button><br>
     <button type="button" onclick=window.location.href="surveyor/SurveyCreator"
             class="createSurvey btn btn-outline-success px-4 mt-1">Create New Survey</button><br>
   </div>
