--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -95,7 +95,7 @@
 <main>
     <h1>Welcome to Mini-SurveyMonkey!</h1>
     <p>Your platform for quick and efficient surveys.</p>
-    <a href="/" class="btn btn-light">I'm a User</a>
+    <a href="user" class="btn btn-light">I'm a User</a>
     <a href="surveyor" class="btn btn-outline-light">I'm the Surveyor</a>
 </main>
 
