--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,9 +21,9 @@
     <nav class="py-2 bg-light border-bottom">
         <div class="container d-flex flex-wrap">
             <ul class="nav me-auto">
-                <li class="nav-item"><a href="home.html" class="nav-link link-dark px-2 active"
+                <li class="nav-item"><a href="/" class="nav-link link-dark px-2 active"
                                         aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link link-dark px-2">About</a></li>
+                <li class="nav-item"><a href="about" class="nav-link link-dark px-2">About Us</a></li>
             </ul>
             <ul class="nav">
                 <li class="nav-item"><a href="./user.html" class="nav-link link-dark px-2">User</a></li>
