--- a/src/main/resources/templates/SurveyCreator.html
+++ b/src/main/resources/templates/SurveyCreator.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="icon" href="logo/icon.png">
-  <link rel="stylesheet" href="createSurvey.css">
-  <script src="SurveyCreator.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+
   <style>
     body {
       display: flex;
@@ -107,9 +107,13 @@
 
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand mr-auto" href="#" style="color: #343a40;">Surveyor | mini-SurveyMonkey</a>
-    <div class="collapse navbar-collapse ml-auto" id="navbarNav">
-      <ul class="navbar-nav">
+    <a class="navbar-brand" href="#" style="color: #343a40;">Surveyor | mini-SurveyMonkey</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="/" style="color: #343a40;">Home</a>
         </li>
@@ -117,6 +121,7 @@
     </div>
   </div>
 </nav>
+
 
 
 <h1>Create A Survey</h1>
@@ -140,18 +145,156 @@
   <button type="button" class="createSurvey btn btn-outline-success">Create Survey</button>
 </div>
 
-<div id="Questions"></div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="createSurvey.js"></script>
+
+
+<div id="questionContainer">
+
+  <style>
+    .question-container {
+      background-color: #dcdcdc;
+      padding: 10px;
+      margin: 15px auto;
+      border-radius: 5px;
+      max-width: 1500px;
+    }
+
+    .close-btn {
+      cursor: pointer;
+      color: red;
+      float: right;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  </style>
+
+  <script>
+    function removeContainer(element) {
+      $(element).closest('.question-container').remove();
+    }
+    $(document).ready(function() {
+      // Initialize an empty array to store questions
+      var generatedQuestions = [];
+
+      $(".new-MCQ").click(function () {
+        var numOptions = Math.floor($("#MCQOptionsNum").val());
+        var newMCQ = `<div class='question-container multipleChoiceQuestion'>
+                      <span class='close-btn' onclick='removeContainer(this)'>x</span>
+                      <label for='QuestionText'>Question:</label>
+                      <input type='text' class='question-text'>
+                      <input type='hidden' class='question-type' value='MCQ'>`;
+
+        for (var i = 1; i <= numOptions; i++) {
+          var option = `<br><label>Option ${i}: <input type='text' class='MCQOption'></label>`;
+          newMCQ = newMCQ.concat(option);
+        }
+        newMCQ = newMCQ.concat('</div>');
+
+        // Append the question HTML to the container
+        $("#questionContainer").append(newMCQ);
+      });
+
+      $(".new-NumQ").click(function () {
+        var newNumQuestion = `<div class='question-container numberRangeQuestion'>
+                              <span class='close-btn' onclick='removeContainer(this)'>x</span>
+                              <label for='QuestionText'>Question:</label>
+                              <input type='text' class='question-text'>
+                              <label for="LowerBound">Lower Bound: </label>
+                              <input type="number" class='num-question-bound'>
+                              <label for="UpperBound">Upper Bound: </label>
+                              <input type="number" class='num-question-bound'>
+                              <input type='hidden' class='question-type' value='NumQ'>
+                          </div>`;
+        // Append the question HTML to the container
+        $("#questionContainer").append(newNumQuestion);
+      });
+
+      $(".new-OpenQ").click(function () {
+        var newOpenQuestion = `<div class='question-container openEndedQuestion'>
+                              <span class='close-btn' onclick='removeContainer(this)'>x</span>
+                              <label for='QuestionText'>Question:</label>
+                              <input type='text' class='question-text'>
+                              <input type='hidden' class='question-type' value='OpenQ'>
+                            </div>`;
+        // Append the question HTML to the container
+        $("#questionContainer").append(newOpenQuestion);
+      });
+
+      $(".createSurvey").click(function () {
+        // Get the survey name from the input field
+        var surveyName = $("#surveyName").val().trim();
+
+        // Validate if the survey name is provided
+        if (!surveyName) {
+          alert("Please provide a name for the survey.");
+          return;
+        }
+
+        // Create a new survey object
+        var survey = {
+          name: surveyName,
+          questions: []
+        };
+
+        // Iterate over each question container and add it to the survey
+        $(".question-container").each(function () {
+          var questionText = $(this).find('.question-text').val().trim();
+          var questionType = $(this).find('.question-type').val();
+
+          if (questionText) {
+            var question = {
+              text: questionText,
+              type: questionType
+            };
+
+            // If it's a numerical range question, add lower and upper bounds
+            if (questionType === 'NumQ') {
+              question.lowerBound = $(this).find('.num-question-bound').eq(0).val();
+              question.upperBound = $(this).find('.num-question-bound').eq(1).val();
+            }
+
+            survey.questions.push(question);
+          }
+        });
+
+        // Validate if there are questions in the survey
+        if (survey.questions.length === 0) {
+          alert("Please add at least one question to the survey.");
+          return;
+        }
+        // Send the survey data to the server for storage
+        $.ajax({
+          type: "POST",
+          contentType: "application/json",
+          url: "/surveyor/survey",
+          data: JSON.stringify(survey),
+          success: function (data) {
+
+            alert("Survey created successfully!");
+
+          },
+          error: function (error) {
+
+            alert("If you see this error, you're fucked");
+          }
+        });
+      });
+    });
+
+
+
+  </script>
+</div>
 <script>
 
   document.addEventListener('DOMContentLoaded', function () {
     var select = document.getElementById('MCQOptionsNum');
-    for (var i = 1; i <= 10; i++) {
+    for (var i = 2; i <= 10; i++) {
       var option = document.createElement('option');
       option.value = i;
       option.text = i;
