--- a/src/main/resources/templates/PrintSurveysForSurveyor.html
+++ b/src/main/resources/templates/PrintSurveysForSurveyor.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <title>User | mini-SurveyMonkey</title>
+        <title>User | MiniSurveyMonkey</title>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -21,7 +21,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                    <a class="navbar-brand" href="#" style="color: #343a40;">Mini-SurveyMonkey</a>
+                    <a class="navbar-brand" href="#" style="color: #343a40;">MiniSurveyMonkey</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -51,29 +51,61 @@
             <!-- Table to display surveys -->
             <table class="table">
                 <thead>
-                    <tr >
+                    <tr class="text-center">
+                        <th scope="col">Survey ID</th>
                         <th scope="col">Survey Name</th>
                         <th scope="col">Status</th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="text-center">
                     <!-- Loop through surveys and populate the table -->
-                    <tr th:each="survey : ${surveys}" th:id="'survey-' + ${survey.id}">
+                    <tr th:each="survey : ${surveys}" th:id="'survey-' + ${survey.id}" data-survey-id="${survey.id}">
+                        <td th:text="${survey.id}"></td>
                         <td th:text="${survey.name}"></td>
                         <td th:style="${survey.open ? 'color: green;' : 'color: red;'}">
                             <span th:text="${survey.open ? 'OPEN' : 'CLOSED'}"></span>
                         </td>
                         <td>
-                            <form action="/user/surveyView" method="GET">
+                            <form action="PrintSurveys/surveyorPreview" method="GET">
                                 <input type="hidden" th:value="${survey.id}" name="surveyId">
-                                <button th:if="${survey.open}" th:text="${survey.open}" type="submit" class="btn btn-secondary"></button><!--Open CLOSED-->
-                                <span th:unless="${survey.open}" th:text="${survey.open}"></span>
+                                <button type="submit" class="btn btn-primary">View</button>
+                            </form>  
+                            <form th:action="'surveyor/' + ${survey.id} + '/close'" method="POST">
+                                <input type="hidden" th:value="${survey.id}" name="surveyId">
+                                <button class="btn btn-danger" type="submit" th:onclick="'closeAndRemoveSurvey(' + ${survey.id} + ')'" >Close</button>
                             </form>
                         </td>
                     </tr>
                 </tbody>
             </table>
+
+            <script>
+                
+                
+                function closeAndRemoveSurvey(surveyId) {
+                    // Use AJAX to send a request to close the survey
+                    $.ajax({
+                        type: 'POST',
+                        url: '/surveyor/' + surveyId + '/close',
+                        success: function () {
+                            // Update the status text and styling directly in the DOM
+                            var surveyElement = $('#survey-' + surveyId);
+                            surveyElement.find('td:nth-child(3) span').text('CLOSED').css('color', 'red');
+
+                            // Remove the "CLOSE" button
+                            surveyElement.find('td:last-child button').remove();
+
+                        },
+                        error: function () {
+                            alert('Failed to close the survey.');
+                        },
+                    });
+                }
+
+            </script>
+
+
 
         </div>
     </body>
