--- a/src/main/resources/templates/SurveyPreviewForSurveyor.html
+++ b/src/main/resources/templates/SurveyPreviewForSurveyor.html
@@ -84,7 +84,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
-                    <a class="navbar-brand" href="#" style="color: #343a40;">Mini-SurveyMonkey</a>
+                    <a class="navbar-brand" href="#" style="color: #343a40;">MiniSurveyMonkey</a>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="navbar-nav">
@@ -97,7 +97,6 @@
             </nav>
         </div>
         <main>
-            <form id="survey-form">
                 <th:block th:each="question : ${survey.questions}">
                     <th:block th:if="${question.type} == 'num-range'">
                         <label th:for="${question.type} + ${question.id}" th:text="${question.question}"></label>
@@ -118,10 +117,9 @@
                     </th:block>
                 </th:block>
                 <button type="submit" id="submit" onclick="alert('Normally, this would submit the survey!');">Submit</button>
-            </form>
         </main>
         <footer>
-            <p class="footer-text">© 2023 Mini-SurveyMonkey. All rights reserved.</p>
+            <p class="footer-text">© 2023 MiniSurveyMonkey. All rights reserved.</p>
         </footer>
     </body>
 
