updated some fixes

--- a/src/main/resources/templates/PrintSurveysForSurveyor.html
+++ b/src/main/resources/templates/PrintSurveysForSurveyor.html
@@ -72,7 +72,7 @@
                                 <button type="submit" class="btn btn-primary">View</button>
                             </form>
                             <th:block th:if="${survey.open}">
-                            <form th:action="${survey.id} + '/close'" method="POST">
+                            <form action="/surveyor/close" method="POST">
                                 <input type="hidden" th:value="${survey.id}" name="surveyId">
                                 <button class="btn btn-danger"  type="submit" th:onclick="'closeAndRemoveSurvey(' + ${survey.id} + ')'" >Close</button>
                             </form>
